--- a/client_side/pages/detail.html
+++ b/client_side/pages/detail.html
@@ -11,28 +11,33 @@
 <body>
     <div class="container">
         <div>EMPLOYEE DETAILS</div>
-        <div class="empdetails">
-            <div class="details">
+        <div class="empdetails" id="empdetails">
+            <!-- <div class="details">
                 <div class="leftside">
                     <img src="../../image/person.png" alt="no image">
                 </div>
                 <div class="rightside">
-                    <div>Employee ID</div>
-                    <div>Name</div>
-                    <div>Designation</div>
-                    <div>Salary</div>
-                    <div>Experience</div>
-                    <div>Email</div>
-                    <div>Phone</div>
+                    <div class="inscard">
+                        <div id="EmpID" name="EmpID">Employee ID</div>
+                        <div>manu</div>
+                    </div>
+                    <div id="Name" name="Name">Name</div>
+                    <div id="designation" name="designation">Designation</div>
+                    <div id="salary" name="salary">Salary</div>
+                    <div id="experience" name="experience">Experience</div>
+                    <div id="email" name="email">Email</div>
+                    <div id="phone" name="phone">Phone</div>
                 </div>
             </div>
             <div>
                 <a href="./index.html"><button>Back</button></a>
                 <a href="../pages/edit.html"><button>Edit</button></a>
-                <button>Delete</button>
-            </div>
+                <a href="./index.html"><button>Delete</button></a>
+            </div> -->
         </div>
     </div>
+
+    <script src="../js/detail.js"></script>
 
 </body>
 
