--- a/client_side/pages/edit.html
+++ b/client_side/pages/edit.html
@@ -11,20 +11,23 @@
 <body>
     <div class="main">
         <div>Edit Employee Details</div>
-        <div class="image">
-            <img src="../../image/person.png" alt="no image">
+        <div id="main_2">
+            <div class="image">
+                <img src="../../image/person.png" alt="no image">
+            </div>
+            <!-- <div class="details">
+                <input type="text" placeholder="Employee ID" id="EmpID" name="EmpID">
+                <input type="text" placeholder="Name" id="Name" name="Name">
+                <input type="text" placeholder="Designation" id="designation" name="designation">
+                <input type="text" placeholder="Salary" id="salary" name="salary">
+                <input type="text" placeholder="Experience" id="experience" name="experience">
+                <input type="text" placeholder="Email" id="email" name="email">
+                <input type="text" placeholder="Phone" id="phone" name="phone">
+                <a href="./index.html"><button>Save</button></a>
+            </div> -->
         </div>
-        <div class="details">
-            <input type="text" placeholder="Employee ID">
-            <input type="text" placeholder="Name">
-            <input type="text" placeholder="Designation">
-            <input type="text" placeholder="Salary">
-            <input type="text" placeholder="Experience">
-            <input type="text" placeholder="Email">
-           <input type="text" placeholder="Phone">
-           <button>Save</button>
-        </div>
-    </div>
+
+        <script src="../js/edit.js"></script>
 </body>
 
 </html>
