--- a/client_side/pages/index.html
+++ b/client_side/pages/index.html
@@ -9,22 +9,29 @@
 </head>
 
 <body>
-    <div class="card-container">
-        <div>EMPLOYEES</div>
+    <nav>
+        <div><a href="../pages/addEmployee.html"><button>ADD EMPLOYEE</button></a></div>
+    </nav>
+    <div class="head">EMPLOYEES</div>
+    <div class="container2">
+        <div id="card-container">
+            <!-- <div>EMPLOYEES</div>
         <div><a href="../pages/addEmployee.html"><button>ADD EMPLOYEE</button></a></div>
         <br>
-        <div class="card">
+        <div id="card">
             <a href="#">
                 <img src="../../image/person.png" alt="no image">
                 <div>
-                    <div>Employee ID</div>
-                    <div>Name</div>
-                    <div>Designation</div>
+                    <div id="EmpID">Employee ID</div>
+                    <div id="Name">Name</div>
+                    <div id="designation">Designation</div>
                     <a href="../pages/detail.html"><button>Info</button></a>
                 </div>
             </a>
+        </div> -->
         </div>
     </div>
+    <script src="../js/index.js"></script>
 </body>
 
 </html>
